--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-loader": "^5.1.3",
     "extract-text-webpack-plugin": "^0.8.1",
     "gulp-webpack": "^1.4.0",
+    "lodash": "^3.9.3",
     "postcss-color-rebeccapurple": "^1.1.0",
     "postcss-loader": "^0.4.4",
     "react": "^0.13.3",
