--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postcss-color-rebeccapurple": "^1.1.0",
     "postcss-loader": "^0.4.4",
     "react": "^0.13.3",
+    "react-in-style": "^0.21.0",
     "style-loader": "^0.12.3"
   },
   "devDependencies": {
