--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   },
   "devDependencies": {
     "babel-core": "^5.4.7",
+    "babel-eslint": "^3.1.23",
     "css-loader": "^0.14.4",
+    "eslint": "^0.24.1",
     "gulp": "^3.8.11",
     "gulp-livereload": "^3.8.0",
     "gulp-react": "^3.0.1",
