--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
         "moment": true,
         "CustomEvent": true,
         "document": true,
-        "jstz": true
+        "jstz": true,
+        "analytics": true
     }
 }
