--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-eslint": "^3.1.23",
     "css-loader": "^0.14.4",
     "eslint": "^0.24.1",
+    "eslint-plugin-react": "^3.2.3",
     "gulp": "^3.8.11",
     "gulp-livereload": "^3.8.0",
     "gulp-react": "^3.0.1",
